--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Apri Portone</title>
+  <title>Apri-Portone</title>
   <script>
     fetch("https://hmqj59slts8uwbvivpeh5i36ycmjwsa3.ui.nabu.casa/api/webhook/apri_portone", {
       method: "POST"
